# libstation

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
station/: meson.build  station-control.c  station-control.h  station-http-private.h  station-platform.c  station-platform.h  station-service.c  station-service.h  station-single-instance.c  station-single-instance.h  station-tray-mac.m  station-tray-private.h  station-tray-sni.c  station-tray-win.c  station-tray.c  station-tray.h  station-updates-schema-private.h  station-updates-schema.c  station-updates-schema.h  station-updates.c  station-updates.h  station-version.h.in  station.h
station/backends/android/: station-android.c  station-tray-android.c
station/backends/linux/: station-tray-sni.c
station/backends/macos/: station-tray-mac.m
station/backends/windows/: station-tray-win.c
station/ipc/: meson.build
station/platform/: meson.build
station/service/: meson.build  station-service.h
station/service/android/: station-service-android.c
station/single-instance/: meson.build  station-single-instance.h
station/tray/: meson.build  station-tray.h
station/tray/android/: station-tray-android.c
station/tray/linux/: station-tray-sni.c
station/tray/macos/: station-tray-mac.m
station/tray/windows/: station-tray-win.c
station/updates/: meson.build  station-http.c  station-minisign-private.h  station-minisign.c  station-updates-schema-private.h  station-updates-schema.c  station-updates-schema.h  station-updates.c  station-updates.h
station/updates/android/: station-updates-http-android.c
station/vapi/: libstation-1.vapi  libstation-android-1.deps  libstation-android-1.vapi
